--- a/vuev1.0/package.json
+++ b/vuev1.0/package.json
@@ -35,8 +35,10 @@
     "express": "latest",
     "express-session": "^1.17.0",
     "http-errors": "latest",
+    "less": "^3.11.1",
     "morgan": "^1.9.1",
     "mysql": "~2.16.0",
+    "vconsole": "^3.3.4",
     "video.js": "^7.6.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
